[gd_scene load_steps=11 format=3 uid="uid://ct8tdw87yo47l"]

[ext_resource type="Script" path="res://Scripts/P1.gd" id="1_2py76"]
[ext_resource type="Texture2D" uid="uid://dfrkm7bxhru5q" path="res://UI Icons/iconmonstr-arrow-24.svg" id="2_hixht"]
[ext_resource type="Material" uid="uid://kxf804gwen78" path="res://neonGreenP1.tres" id="2_vlb2k"]
[ext_resource type="Texture2D" uid="uid://cyisu4mxvdefl" path="res://UI Icons/Heart.svg" id="4_njyl5"]
[ext_resource type="PackedScene" uid="uid://tqejvwjmwiyo" path="res://Scenes/Notification.tscn" id="5_gxi6r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5int"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37jwm"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sutm2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bm0b"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk355"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)
border_width_left = 9
border_width_top = 9
border_width_bottom = 9
border_color = Color(0.494118, 0.494118, 0.494118, 0)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="P1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2py76")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.997
anchor_bottom = 1.0
offset_right = 0.455933
offset_bottom = -1.0
color = Color(0.0784314, 0.0941176, 0.0784314, 1)

[node name="SolutionContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.337
anchor_top = 0.139
anchor_right = 0.659
anchor_bottom = 0.87
offset_left = -0.223999
offset_top = -0.0720062
offset_right = -0.16803
offset_bottom = 0.239929
grow_horizontal = 2
grow_vertical = 2

[node name="SolutionPanel" type="PanelContainer" parent="SolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i5int")

[node name="margin" type="MarginContainer" parent="SolutionContainer/SolutionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="SolutionTexture" type="TextureRect" parent="SolutionContainer/SolutionPanel/margin"]
modulate = Color(0.517647, 0.517647, 0.517647, 1)
material = ExtResource("2_vlb2k")
layout_mode = 2
expand_mode = 1

[node name="MainLayer" type="CanvasLayer" parent="."]

[node name="LetterDial" type="Button" parent="MainLayer"]
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.045
anchor_right = 0.321
anchor_bottom = 0.958
offset_left = 0.199999
offset_top = -0.160002
offset_right = 0.207977
offset_bottom = 0.215942
grow_vertical = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../NumberDial")
focus_neighbor_right = NodePath("../NumberDial")
theme_override_styles/disabled = SubResource("StyleBoxFlat_37jwm")
theme_override_styles/focus = SubResource("StyleBoxFlat_sutm2")
disabled = true

[node name="VerticalContainer" type="VBoxContainer" parent="MainLayer/LetterDial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainLayer/LetterDial/VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30

[node name="TextureRect" type="TextureRect" parent="MainLayer/LetterDial/VerticalContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_hixht")
expand_mode = 1

[node name="Dial" type="RichTextLabel" parent="MainLayer/LetterDial/VerticalContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]A"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="MainLayer/LetterDial/VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="MainLayer/LetterDial/VerticalContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_hixht")
expand_mode = 1
flip_v = true

[node name="NumberDial" type="Button" parent="MainLayer"]
anchors_preset = -1
anchor_left = 0.674
anchor_top = 0.042
anchor_right = 0.97
anchor_bottom = 0.955
offset_left = 0.552002
offset_top = -0.216002
offset_right = 0.559937
offset_bottom = 0.159973
grow_vertical = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../LetterDial")
focus_neighbor_right = NodePath("../LetterDial")
theme_override_styles/disabled = SubResource("StyleBoxFlat_37jwm")
theme_override_styles/focus = SubResource("StyleBoxFlat_sutm2")
disabled = true

[node name="VerticalContainer" type="VBoxContainer" parent="MainLayer/NumberDial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainLayer/NumberDial/VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30

[node name="TextureRect" type="TextureRect" parent="MainLayer/NumberDial/VerticalContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_hixht")
expand_mode = 1

[node name="Dial" type="RichTextLabel" parent="MainLayer/NumberDial/VerticalContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]1"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="MainLayer/NumberDial/VerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="MainLayer/NumberDial/VerticalContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_hixht")
expand_mode = 1
flip_v = true

[node name="CountdownBar" type="ProgressBar" parent="MainLayer"]
anchors_preset = -1
anchor_left = 0.334
anchor_top = 0.051
anchor_right = 0.657
anchor_bottom = 0.116
offset_left = 1.23196
offset_top = -0.0480003
offset_right = 1.13599
offset_bottom = -0.167999
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_0bm0b")
theme_override_styles/fill = SubResource("StyleBoxFlat_yk355")
value = 91.21
show_percentage = false

[node name="CountDown" type="RichTextLabel" parent="MainLayer/CountdownBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]5:00"
fit_content = true

[node name="Score" type="RichTextLabel" parent="MainLayer/CountdownBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 1.071
anchor_right = 1.0
anchor_bottom = 1.071
offset_left = 0.14003
offset_top = 0.0179977
offset_right = -2.0
offset_bottom = 54.018
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Current Score: 0"

[node name="RichTextLabel" type="RichTextLabel" parent="MainLayer"]
clip_contents = false
anchors_preset = -1
anchor_left = 0.336
anchor_top = 0.847
anchor_right = 0.659
anchor_bottom = 0.909
offset_left = -0.0720215
offset_top = 0.143982
offset_right = -0.16803
offset_bottom = -0.0320435
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Press A to confirm"

[node name="HeartContainer" type="Control" parent="MainLayer"]
layout_direction = 2
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.939
anchor_right = 0.5
anchor_bottom = 0.939
offset_left = -79.0
offset_top = -27.472
offset_right = 79.0
offset_bottom = 27.528
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(79, 28)
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="MainLayer/HeartContainer"]
layout_mode = 2
offset_right = 50.0
offset_bottom = 50.0
pivot_offset = Vector2(25, 27)
size_flags_horizontal = 3
texture = ExtResource("4_njyl5")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MainLayer/HeartContainer"]
layout_mode = 2
offset_left = 54.0
offset_right = 104.0
offset_bottom = 50.0
pivot_offset = Vector2(24, 26)
size_flags_horizontal = 3
texture = ExtResource("4_njyl5")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MainLayer/HeartContainer"]
layout_mode = 2
offset_left = 108.0
offset_right = 158.0
offset_bottom = 50.0
pivot_offset = Vector2(25, 27)
size_flags_horizontal = 3
texture = ExtResource("4_njyl5")
expand_mode = 1

[node name="NotificationLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="LostNotif" parent="NotificationLayer" instance=ExtResource("5_gxi6r")]
visible = false
text = "You ran out of time!"

[node name="WinNotif" parent="NotificationLayer" instance=ExtResource("5_gxi6r")]
visible = false
text = "You won!"

[node name="NextNotif" parent="NotificationLayer" instance=ExtResource("5_gxi6r")]
visible = false
text = "Correct!"

[node name="WrongNotif" parent="NotificationLayer" instance=ExtResource("5_gxi6r")]
visible = false
text = "Wrong answer! You lost a heart"
